--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <meta name="keywords" content="criptomoon, criptomoneda, blockchain, nft, bitcoin, binance, etrherum, cursos" />
   <link rel="stylesheet" href="css/custom.css" />
   <link rel="stylesheet" href="css/styles.css" />
-
+  <link rel="stylesheet" href="css/newStyle.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Lato:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="icon" type="image/x-icon" href="imagenes\icons8-luna-48.png" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <title>Criptomoon | inicio</title>
@@ -64,74 +67,84 @@
           <p class="text-white mx-auto mt-2 mb-5 fs-2 animate-abajo">
             Criptomonedas, el dinero del mañana.
           </p>
-          <a class="btn text-secondary border" href="pages/contactos.html">haz click</a>
+          <a class="btn text-secondary border btn-main" href="pages/contactos.html">haz click</a>
         </div>
       </div>
     </div>
   </header>
   <!--fin de header main-->
   <!--seccion que es criptomoon-->
-  <section class="mt-4 seccion__index py-3">
+  <section class="seccion__index ">
 
     <div class="container px-4 px-lg-5">
       <!-- Featured Project Row-->
       <h2 class="text-center fs-1 text-white mb-5 animate-entrada">Que es criptomoon</h2>
-      <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-        <article class="col-10 mx-auto col-xl-6 col-lg-6 animate-entrada">
-          <div class="featured-text text-center text-lg-left text-white">
-            <h3 class="py-3">Criptomoon</h3>
-            <p class="text-white-50 mb-0 py-3 px-3">
-              Criptomoon, es una academia que nace gracias a dos apasionados
-              con el mundo de las inversiones, el desarrollo personal y la
-              conquista del capital humano. sus fundadores Roddy tortolero y
-              German Vivas quienes llevan años de estudio y preparacion en
-              estas areas, tienen como objetivo acompañarlos en este proceso
-              de crecimiento y despertar en cada uno de ustedes un interes
-              genuino por desarrollar habilidades que les permitan alcanzar el
-              exito y la consistencia en todas las areas de su vida.
-            </p>
-          </div>
-        </article>
-        <article class="col-10 mx-auto col-xl-6 col-lg-6 animate-salida">
-          <img class="img-fluid mb-3 mb-lg-0 h-100 w-100" src="imagenes\dinero-del-mañana.jpg"
-            alt="guia sobre el dinero del mañana" />
-        </article>
-      </div>
-      <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-        <article class="col-10 mx-auto col-xl-6 col-lg-6 order-lg-2 animate-salida">
-          <div class="featured-text text-center text-lg-left text-white">
-            <h3 class="py-3">Nuestra mision</h3>
-            <p class="text-white-50 mb-0 py-3 px-3">
-              Nuestra mision a traves de este material es poder guiarte y
-              mostrarte de una manera practica, simple y sencilla, todo lo que
-              necesitas saber para iniciarte en el mundo de las inversiones en
-              criptomonedas y puedas desarrollar una vision objetiva. gracias
-              al contenido de valor que aqui te aportamos.
-            </p>
-          </div>
-        </article>
-        <article class="col-10 mx-auto col-xl-6 col-lg-6 animate-entrada">
-          <img class="img-fluid mb-3 mb-lg-0 h-100 w-100" src="imagenes\adaptate.jpg"
-            alt="adaptate a las criptomonedas o extinguete financieramente" />
-        </article>
-      </div>
-      <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-        <article class="col-10 mx-auto col-xl-6 col-lg-6 animate-entrada">
-          <div class="featured-text text-center text-lg-left text-white">
-            <h3 class="py-3">¿Que necesitas?</h3>
-            <p class="text-white-50 mb-0 py-3 px-3">
-              Comprar criptomonedas no es tan complicado como parece. Lo podés
-              hacer a través de diversas billeteras virtuales. El
-              procedimiento para invertir es sencillo: solamente hay que
-              cargar dinero en la billetera elegida, ya sea desde una cuenta
-              bancaria en pesos o un depósito a través de oficinas de pagos
-              como Pago Fácil y Rapipago, y comenzar a invertir.
-            </p>
-          </div>
-        </article>
-        <article class="col-10 mx-auto col-xl-6 col-lg-6 animate-salida">
-          <img class="img-fluid mb-3 mb-lg-0 w-100 h-100" src="imagenes\imagen9.jpg" alt="que necesito para comenzar" />
-        </article>
+      <div class="container-article">
+        <div class="gx-0 articleTwoColumns">
+          <article class="mx-autoanimate-entrada">
+            <div class="featured-text text-white">
+              <h3 class="subTitle">Criptomoon</h3>
+              <p class="text-white-50 paragraph">
+                Criptomoon, es una academia que nace gracias a dos apasionados
+                con el mundo de las inversiones, el desarrollo personal y la
+                conquista del capital humano.
+              </p>
+              <p class="text-white-50 paragraph">
+                Sus fundadores Roddy tortolero y
+                German Vivas quienes llevan años de estudio y preparacion en
+                estas areas, tienen como objetivo acompañarlos en este proceso
+                de crecimiento y despertar en cada uno de ustedes un interes
+                genuino por desarrollar habilidades que les permitan alcanzar el
+                exito y la consistencia en todas las areas de su vida.
+              </p>
+            </div>
+          </article>
+          <article class="mx-auto animate-salida">
+            <img class="img-fluid mb-3 mb-lg-0 h-100 w-100" src="imagenes\dinero-del-mañana.jpg"
+              alt="guia sobre el dinero del mañana" />
+          </article>
+        </div>
+        <div class="gx-0 articleTwoColumns">
+          <article class="mx-auto order-lg-2 animate-salida">
+            <div class="featured-text text-white">
+              <h3 class="subTitle">Nuestra mision</h3>
+              <p class="text-white-50 paragraph">
+                Nuestra mision a traves de este material es poder guiarte y
+                mostrarte de una manera practica, simple y sencilla.
+              </p>
+              <p class="text-white-50 paragraph">
+                Todo lo que
+                necesitas saber para iniciarte en el mundo de las inversiones en
+                criptomonedas y puedas desarrollar una vision objetiva. gracias
+                al contenido de valor que aqui te aportamos.
+              </p>
+            </div>
+          </article>
+          <article class="mx-auto animate-entrada">
+            <img class="img-fluid mb-3 mb-lg-0 h-100 w-100" src="imagenes\adaptate.jpg"
+              alt="adaptate a las criptomonedas o extinguete financieramente" />
+          </article>
+        </div>
+        <div class="gx-0 articleTwoColumns">
+          <article class="mx-auto animate-entrada">
+            <div class="featured-text text-white">
+              <h3 class="subTitle">¿Que necesitas?</h3>
+              <p class="text-white-50 paragraph">
+                Comprar criptomonedas no es tan complicado como parece. Lo podés
+                hacer a través de diversas billeteras virtuales.
+              </p>
+              <p class="text-white-50 paragraph">
+                El procedimiento para invertir es sencillo: solamente hay que
+                cargar dinero en la billetera elegida, ya sea desde una cuenta
+                bancaria en pesos o un depósito a través de oficinas de pagos
+                como Pago Fácil y Rapipago, y comenzar a invertir.
+              </p>
+            </div>
+          </article>
+          <article class="mx-auto animate-salida">
+            <img class="img-fluid mb-3 mb-lg-0 w-100 h-100" src="imagenes\imagen9.jpg" alt="que necesito para comenzar" />
+          </article>
+        </div>
       </div>
     </div>
   </section>
