--- a/pages/about.html
+++ b/pages/about.html
@@ -10,6 +10,8 @@
   <meta name="keywords" content="criptomoon, criptomoneda, blockchain, nft, bitcoin, binance, etrherum, cursos" />
   <link rel="stylesheet" href="../css/custom.css">
   <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="../css/newStyle.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Lato:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="../imagenes\icons8-luna-48.png" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <title>Criptomoon | about me</title>
@@ -54,8 +56,8 @@
   </header>
   <!--fin de navbar-->
   <!--about me-->
-  <section class="container">
-    <h1 class="display-1 titulo__principal text-center py-3 animate-entrada">About Me</h1>
+  <section class="container secciones">
+    <h1 class="titulos text-center py-3 animate-entrada">About Me</h1>
     <!-- Page Content -->
     <div class="container">
       <!-- Portfolio Item Heading -->
@@ -141,9 +143,9 @@
   </section>
   <!--fin de about me-->
   <!--herramientas-->
-  <section class="testimonials text-center">
+  <section class="testimonials text-center secciones">
     <div class="container">
-      <h2 class="mb-5 text-white py-3 animate-entrada">Principales herramientas</h2>
+      <h2 class="titulos text-white animate-entrada">Principales herramientas</h2>
       <div class="row animate-arriba">
         <article class="col-lg-4">
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
@@ -179,11 +181,10 @@
   </section>
   <!--fin de herramientas-->
   <!-- tips de finanzas -->
-  <section class="container">
-    <h2 class="text-center display-1 text-white py-3 animate-entrada">tips de finanzas</h2>
-    <div class="px-4 px-lg-5 py-5">
-      <div class="row gx-4 gx-lg-5 d-flex justify-content-center animate-abajo">
-        <article class="card card1 col-md-6 col-lg-4 mb-5 gy-3 ms-3 animate-entrada" style="width: 18rem">
+  <section class="container secciones">
+    <h2 class="text-center titulos text-white py-3 animate-entrada">tips de finanzas</h2>
+      <div class="containerCardAbout animate-abajo">
+        <article class="card card1 animate-entrada" >
           <img src="../imagenes\card1.jpg" alt="cosas que no te dejan invertir" />
           <div class="card-body card__content">
             <h3 class="">Titulo</h3>
@@ -193,7 +194,7 @@
             </p>
           </div>
         </article>
-        <article class="card card1 col-md-6 col-lg-4 mb-5 gy-3 ms-3" style="width: 18rem">
+        <article class="card card1 animate-entrada" >
           <img class="" src="../imagenes\card2.jpg" alt="que necesitas para invertir en criptomoneda" />
           <div class="card-body card__content">
             <h3 class="">Titulo</h3>
@@ -203,7 +204,7 @@
             </p>
           </div>
         </article>
-        <article class="card card1 col-md-6 col-lg-4 mb-5 gy-3 ms-3" style="width: 18rem">
+        <article class="card card1 animate-entrada" >
           <img src="../imagenes\card3.jpg" alt="cuanto necesito para invertir" />
           <div class="card-body card__content">
             <h3 class="">Titulo</h3>
@@ -213,7 +214,7 @@
             </p>
           </div>
         </article>
-        <article class="card card1 col-md-6 col-lg-4 mb-5 gy-3 ms-3" style="width: 18rem">
+        <article class="card card1 animate-entrada" >
           <img src="../imagenes\card2.jpg" alt="que billetera virtual necesito" />
           <div class="card-body card__content">
             <h3 class="">Titulo</h3>
@@ -224,11 +225,10 @@
           </div>
         </article>
       </div>
-    </div>
   </section>
   <!--fin de tips de finanzass-->
   <!--tarjetas de cpntactos-->
-  <section class="contact-section bg-dark gy-6">
+  <section class="contact-section bg-dark gy-6 secciones">
     <div class="container px-4 px-lg-5 py-5 animate-arriba">
       <div class="row gx-4 gx-lg-5">
         <article class="col-10 mx-auto col-md-4 mb-3 mb-md-0">
